--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,5 +3,7 @@
 
 body {
   font-family: sans-serif;
-  background-color: $darkgreen;
+  background-color: #fffdd8;
+  display: flex;
+  flex-direction: column;
 }
