--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -2,13 +2,20 @@
 
 .footer {
 
-background-color: $darkgreen;
+background-color: $lightergreen;
 padding: 0.8em;
-
+text-align: center;
 
   &-text {
     color: white;
 
     
+  }
+
+  a {
+    color: white;
+    &:hover {
+      text-decoration: underline;
+    }
   }
 }
