--- a/src/components/Nav/nav.scss
+++ b/src/components/Nav/nav.scss
@@ -1,1 +1,11 @@
 @import 'src/styles/vars';
+
+.ant-layout-sider, .ant-menu {
+  background-color: $lightergreen;
+}
+
+nav li a {
+  background-color: white;
+  border-radius: 1em;
+  padding-left: 0.75em;
+}
