--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -8,6 +8,9 @@ text-align: center;
 
   &-text {
     color: white;
+    font-family: stratum;
+    font-size: 1.1em;
+    // font-weight: bold;
 
     
   }
