--- a/src/components/App/app.scss
+++ b/src/components/App/app.scss
@@ -4,6 +4,11 @@
   background-color: white;
 }
 
+.ant-layout-sider {
+  height: 100%;
+  position: fixed;
+}
+
 #app {
   display: flex;
   flex-direction: column;
