--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -69,7 +69,7 @@ $darkerred: #b50011ff;
 }
 
 @font-face {
-  font-family: "Brandon-grotesque";
+  font-family: "Brandon-grotesque-thin-italic";
   src: local("Brandon-grotesque-thin-italic"),
   url(/src/fonts/Brandon-grotesque/brandon-grotesque-thin-italic-58a8a3a8861fe.otf)
   format("truetype");
