--- a/src/components/App/app.scss
+++ b/src/components/App/app.scss
@@ -2,6 +2,13 @@
 
 .ant-layout {
   background-color: white;
+  &-content {
+    min-height: 43.35vh;
+  }
+}
+
+body {
+  background-color: $lightergreen;
 }
 
 main {
