--- a/src/components/App/app.scss
+++ b/src/components/App/app.scss
@@ -1,9 +1,95 @@
 @import 'src/styles/vars';
 
-.ant-layout {
+// ONCE LOGGED IN
+.ant-layout{
   background-color: white;
   &-content {
     min-height: 43.35vh;
+  }
+  &-header {
+    background-color: white;
+  }
+
+  &-footer {
+    margin: 0px;
+    padding: 0px;
+  }
+
+  &-sider {
+    background-color: $lightergreen;
+  }
+}
+
+.ant-menu {
+  background-color: $lightergreen;
+}
+
+// OVERRIDE AND CUSTOMIZATION OF ANT DESIGN
+.ant-btn {
+  border-radius : 1em;
+}
+
+.ant-switch {
+  background-color: $orange;
+  &-checked {
+    background-color: $yellow;
+  }
+}
+
+#app {
+
+  // NOT LOGGED IN
+  &-home {
+    background-color : white;
+    height : 100%;
+    min-height : 100vh;
+    text-align : center;
+    &:after{
+      background-image : url('/src/img/map.png');
+      background-size : cover;
+      color : transparent;
+      content : '.';
+      height : 100vh;
+      left: 0;
+      opacity : 0.5;
+      position : fixed;
+      top : 0;
+      width : 100%;
+      z-index : 0;
+    }
+    .ant-layout {
+      background-color : white;
+      box-shadow : 0px 0px 15px 0px $lighteryellow;
+      display : inline-block;
+      margin : 10em auto;
+      max-width : 700px;
+      position : relative;
+      width : 50%;
+      text-align : center;
+      z-index : 1;
+      .logo {
+        // TO DO : ajouter les media queries
+        left : 0;
+        height: 6em;
+        max-width : 100%;
+        position : absolute;
+        top : -4em;
+        width : 100%;
+      }
+      p {
+        margin-top : 6em;
+      }
+      form {
+        max-width: none;
+        .ant-btn {
+          margin : 1em 0;
+          &:hover, &:focus, &:visited {
+            border-color : orange;
+            color : $orange;
+          }
+        }
+      }
+    } 
   }
 }
 
