--- a/AperoClockBack/templates/mails/eventCreate.html.twig
+++ b/AperoClockBack/templates/mails/eventCreate.html.twig
@@ -1,1 +1,3 @@
 <h3>Un de vos groupes a organisé un évènement près de chez vous ! </h3>
+
+MAIL QUI ENVOI VERS LA ROUTE QUI PERMET DE REPONDRE A LINVITATION OU DE MODIFIER SON CHOIX grâce à la ROUTEapi/guest/choice du guestController
