Groups on dashboard, serializing with circular reference, starting new groups

--- a/src/components/ListGroups/listgroups.scss
+++ b/src/components/ListGroups/listgroups.scss
@@ -1,6 +1,9 @@
 @import 'src/styles/vars';
 
 #listGroups {
+  align-items : flex-start;
+  display : flex;
+  justify-content : center;
   padding: 1em;
   text-align: center;
 
